# macro-gym

./: .gitignore  LICENSE  MIGRATION.md  README.md  pyproject.toml  requirements.txt
examples/: agent.py
katas/aif/: setup.lisp  tests.lisp
katas/defmemo/: setup.lisp  tests.lisp
katas/unless-let/: setup.lisp  tests.lisp
katas/when-debug/: setup.lisp  tests.lisp
katas/with-logging/: setup.lisp  tests.lisp
katas/with-mutex-held/: setup.lisp  tests.lisp
katas/with-resource/: setup.lisp  tests.lisp
katas/with-retry/: setup.lisp  tests.lisp
katas/with-timing/: setup.lisp  tests.lisp
katas/with-transaction/: setup.lisp  tests.lisp
lisp/: macro-gym.asd  macro-helpers.lisp  package.lisp  server.lisp  ted.lisp
macro_gym/: __init__.py  compat.py  doctor.py  env.py  grader.py  pool.py  sbcl.py  sexp.py
scripts/: regrade_sanity.py
tests/: run-tests.lisp  test_per_instance_sbcl.py
tests/lisp/: test-evaluate.lisp  test-framing.lisp  test-kata-cache.lisp  test-normalize.lisp  test-safety.lisp  test-ted.lisp
tests/python/: test_e2e.py  test_env_shim.py  test_reward_fn.py
